2010-11-24  Nicolas Dufresne  <nicolas.dufresne@collabora.co.uk>

Reviewed by Martin Robinson.

        [GTK] Windowless plugins gets broken key input
        https://bugs.webkit.org/show_bug.cgi?id=49927

        When converting the GdkEvent to XEvent we need to send the
        hardware_keycode as XEvent::keycode. Instead we where sending
        the GdkEvent::keyval. This is already tested by
        plugins/keyboard-events.html, but a bug in the test plugin was
        resulting in false positive.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::handleKeyboardEvent):
2010-11-24  Nicolas Dufresne  <nicolas.dufresne@collabora.co.uk>

        Reviewed by Martin Robinson.

        [GTK] Windowless plugins gets broken key input
        https://bugs.webkit.org/show_bug.cgi?id=49927

        Convert the XEvent::keycode to ASCII before printing it. Not
        doing this was causing false positive in
        plugins/keyboard-events.html.

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (keycode_to_char):
        (webkit_test_plugin_handle_event):

Canonical link: https://commits.webkit.org/63176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72717 268f45cc-cd09-0410-ab3c-d52691b4dbfc